all: version public assets, improve sessions
Adds the ability to version public assets (JS, CSS, images, etc) in
templates by using the new `versionpath` helper. This appends a query
parameter containing the last modified time, in order to purge the
browser cache when assets are updated. This also required a change to
the way helper funcs are loaded, as there was previously a bug that
prevented user-defined template funcs from being used in layout files.

This also added some configuration options to the session cookie. The
name and max age of the session cookie can now be customized.

--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -1,7 +1,7 @@
 {{ define "title" }}Home{{ end }}
 
 {{ define "content" }}
-  <h1>Hello!</h1>
+  <h1 class="title">Hello!</h1>
   <p>Welcome to Seatbelt. This is a sample application that shows off all the framework can do.</p>
   <a href="/session">Set and view session data</a>
 {{ end }}
