--- a/example/templates/layout.html
+++ b/example/templates/layout.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href='{{ versionpath "/public/css/style.css" }}'/>
+  {{ csrfMetaTags }}
   <title>{{ block "title" . }}test{{ end }}</title>
-  <link rel="stylesheet" href="/public/css/style.css"/>
 </head>
 <body>
   {{ block "content" . }}<p>Hello</p>{{ end }}
-  <script src="/public/js/main.js"></script>
+  <script src='{{ versionpath "/public/js/main.js" }}'></script>
 </body>
 </html>
