render: rewrite to use unrolled/render

--- a/render/testdata/templates/index.html
+++ b/render/testdata/templates/index.html
@@ -1,5 +1,2 @@
-{{ define "title" }}test2{{ end }}
-
-{{ define "content" }}
-  <h1>test2</h1>
-{{ end }}
+{{ define "title-index" }}index{{ end }}
+<h1>test index</h1>
