render: fixes for updated example

--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -1,7 +1,4 @@
-{{ define "title" }}Home{{ end }}
-
-{{ define "content" }}
-  <h1 class="title">Hello!</h1>
-  <p>Welcome to Seatbelt. This is a sample application that shows off all the framework can do.</p>
-  <a href="/session">Set and view session data</a>
-{{ end }}
+{{ define "title-index" }}Home{{ end }}
+<h1 class="title">Hello!</h1>
+<p>Welcome to Seatbelt. This is a sample application that shows off all the framework can do.</p>
+<a href="/session">Set and view session data</a>
