--- a/example/templates/layout.html
+++ b/example/templates/layout.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href='{{ versionpath "/public/css/style.css" }}'/>
   {{ csrfMetaTags }}
-  <title>{{ block "title" . }}test{{ end }}</title>
+  <title>{{ $title := partial "title" }}{{ with $title }}{{ . }}{{ else }}test{{ end }}</title>
 </head>
 <body>
-  {{ block "content" . }}<p>Hello</p>{{ end }}
+  {{ yield }}
   <script src='{{ versionpath "/public/js/main.js" }}'></script>
 </body>
 </html>
