--- a/example/templates/admin.html
+++ b/example/templates/admin.html
@@ -1,7 +1,6 @@
-{{ define "title-index" }}{{ t "Home" . }}{{ end }}
-<h1 class="title">{{ t "Hello" . }}</h1>
+{{ define "title-admin" }}Admin{{ end }}
+<h1 class="title">Admin</h1>
 <p>{{ t "Greet" . }}</p>
 <p>{{ t "WelcomeMessage" . }}</p>
 <a href="/session">{{ t "SessionData" . }}</a>
 <a href="/txt">Plaintext link</a>
-<a href="/admin/home">Admin</a>
